# pixel-compiler

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  DOCS.md  README.md  main  readme.md  source.pxl  source.sgivush
examples/: solar_system.pxl
runtime/: pxl_draw.c  pxl_draw.h  pxl_error.c  pxl_error.h  pxl_graphics.c  pxl_graphics.h  pxl_string.c  pxl_string.h  pxl_utilities.c
src/: Compiler.cpp  Compiler.h  CompilerError.cpp  CompilerError.h  CompilerException.cpp  CompilerException.h  Timer.h  compiler.cpp  compiler.h  main.cpp  main.rs
src/IR/: IRGeneratorLLVM.cpp  IRGeneratorLLVM.h
src/lex/: Lexer.cpp  Lexer.h  LexerError.cpp  LexerError.h  LexerException.cpp  LexerException.h  Token.cpp  Token.h  lexer.cpp  lexer.h  lexer.rs  lexer_base.rs  mod.rs  token.h  token.rs  tokens.rs
src/parse/: AstNode.h  ExpressionNodes.cpp  ExpressionNodes.h  Parser.cpp  Parser.h  ParserError.cpp  ParserError.h  StatementNode.h  StatementNodes.cpp  StatementNodes.h  Visitor.h  ast.h
src/parse/AST/: ASTPrinter.cpp  ASTPrinter.h  AstNode.h  AstPrinter.cpp  AstPrinter.h  AstVisitor.h  Expression.cpp  Expression.h  Statement.cpp  Statement.h  Visitor.cpp  Visitor.h
src/semantic/: DeclarationPassVisitor.cpp  DeclarationPassVisitor.h  FunctionSignature.h  Scope.cpp  Scope.h  SemanticError.cpp  SemanticError.h  SemanticVisitor.cpp  SemanticVisitor.h  Symbol.h  SymbolPool.cpp  SymbolPool.h  SymbolTable.cpp  SymbolTable.h  TypeCheckerVisitor.cpp  TypeCheckerVisitor.h
src/semantic/functions/: FunctionInfo.h  FunctionRegistry.cpp  FunctionRegistry.h
src/semantic/globals/: GlobalEntry.h  GlobalRegistry.cpp  GlobalRegistry.h
src/types/: TypeContext.cpp  TypeContext.h  TypeNode.cpp  TypeNode.h
